# mcim-rust-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  justfile
.github/workflows/: gitlab-sync.yml  rust.yml  test_and_build.yml  tests.yml
config/: mongodb.conf  redis.conf
data/: curseforge_categories.json  curseforge_files.json  curseforge_fingerprints.json  curseforge_mods.json  curseforge_translated.json  file_cdn_files.json  modrinth_game_versions.json  modrinth_projects.json  modrinth_translated.json
migrations/: 20250710121825_translation.sql  20250711003224_modrinth.sql
src/: app.rs  lib.rs  main.rs
src/config/: _redis.rs  database.rs  mod.rs  mongo.rs  postgres.rs
src/db/: _redis.rs  database.rs
src/errors/: mod.rs  routes.rs  services.rs
src/middlewares/: redis_cache.rs
src/models/: mod.rs
src/models/common/: mod.rs  requests.rs  responses.rs
src/models/curseforge/: entities.rs  mod.rs  requests.rs  responses.rs
src/models/modrinth/: entities.rs  mod.rs  requests.rs  responses.rs
src/models/translate/: entities.rs  requests.rs  responses.rs
src/routes/: common.rs  curseforge.rs  file_cdn.rs  mod.rs  modrinth.rs  openapi.rs  translate.rs
src/services/: common.rs  curseforge.rs  mod.rs  modrinth.rs  translate.rs  translate_sqlx.rs
src/utils/: app.rs  file_cdn_load_balance.rs  mod.rs  redis_cache.rs
tests/: common.rs  curseforge.rs  db_utils.rs  file_cdn.rs  mod.rs  modrinth.rs  translate.rs
