[package]
name = "mcim-rust-api"
version = "0.1.0"
edition = "2021"
authors = ["z0z0r4@outlook.com"]
description = "MCIM API rewritten in Rust"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = {version = "2.0", features = ["chrono-0_4"] }
mongodb = { version = "2.4.0", features = ["tokio-runtime"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
serde-value = "0.7.0"
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-actix-web = "0.1.2"
utoipauto = "=0.3.0-alpha.2"
actix-service = "2.0.3"
futures-util = "0.3.31"
bytes = "1.10.1"
md5 = "0.7.0"
reqwest = { version = "0.12.20", features = ["json"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4"
urlencoding = "2.1.3"
actix-middleware-etag = "0.4.4"
actix-web-prom = "0.10.0"

[dependencies.redis]
version = "0.31.0"
features = ["aio", "tokio-comp", "r2d2"]


[dev-dependencies]
urlencoding = "2.1.3"
