[package]
name = "mcim-rust-api"
version = "0.1.0"
edition = "2024"
authors = ["z0z0r4@outlook.com"]
description = "MCIM API rewritten in Rust"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.15.1", features = ["chrono_0_4"] }
bson = { version = "3.0.0", features = ["chrono-0_4", "serde_with-3", "serde"] }
mongodb = { version = "3.3.0" , features = ["bson-3"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-actix-web = "0.1.2"
utoipauto = "=0.3.0-alpha.2"
actix-service = "2.0.3"
futures-util = "0.3.31"
bytes = "1.10.1"
md5 = "0.8.0"
reqwest = { version = "0.12.24", features = ["json"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4"
urlencoding = "2.1.3"
actix-middleware-etag = "0.4.6"
actix-web-prom = "0.10.0"
redis = { version = "0.32.7", features = ["tokio-comp"] }
prometheus = "0.14.0"
rand = "0.9.2"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
